test/errors/types/tuple_index_nonliteral_fail.hy
int main()
{
    (int, string) pair = (1, "hi")
    int i = 1
    int x = pair[i]
    return 0
}
